--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <div class="gnb-mo">
-        <h1 class="logo"><a href="/" target="_blank" aria-label="Trang chủ"><img src="/img/logo-nacencomm.png" alt="Nacencomm"></a>
+        <h1 class="logo"><a href="/" target="_blank" aria-label="Trang chủ"><img src="img/logo-nacencomm.png" alt="Nacencomm"></a>
         </h1>
         <button
           type="button"
