--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-wrapper">
             <div class="container">
-                <h1 class="logo"><a href="/" target="_blank" aria-label="Trang chủ"><img src="/img/logo-nacencomm.png"
+                <h1 class="logo"><a href="/" target="_blank" aria-label="Trang chủ"><img src="img/logo-nacencomm.png"
                             alt="Nacencomm"></a>
                 </h1>
                 <div class="header-menu">
